--- a/app/sass/components/_hero-section.scss
+++ b/app/sass/components/_hero-section.scss
@@ -14,9 +14,13 @@
 }
 
 .hero-section__text-heading {
-  font-size: 5.3125em;
+  font-size: 3em;
   color: $color-white;
   max-width: 75%;
+
+  @include breakpoint('tablet-desktop') {
+    font-size: 5.3125em;
+  }
 }
 
 .hero-section__text-paragraph {
